--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>Melvin</title>
+        <title>Melvin</title>
+        <link rel="icon" href="images/favicon-main.ico">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="css/lightbox.css">
 		<link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -25,7 +27,7 @@
         <header class ="main_header_bg">
             <div class ="navbar-container" id ="navbar">
                  <nav class="navbar navbar-expand-lg container main_nav">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="#home">
                         <img src="images/logo.png" class ="no-filter">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +92,7 @@
                                  Pellentesque facilisis sem sed iaculis cursus. Etiam eu faucibus nisl. Curabitur at metus non neque pellentesque lobortis ac vitae urna. Maecenas ut auctor ante, ut vestibulum risus. Fusce odio lectus,</p>
                                  <br><br>
                                  <a href="javascript:void(0)" class="btn-teritiary">Download
-                                      CV</a>
+                                CV</a>
                             </div>
                         </div>
                     </div>
@@ -102,7 +104,6 @@
                 <div class="container z-top">
                     <div class="common_header text-center">
                         <h1>Technical Skill</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                     </div>
                     <ul class="list-untyled owl-carousel">
                         <li class ="item">
@@ -180,7 +181,7 @@
                 <div class="container">
                     <div class="common_header text-center">
                         <h1>Projects</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illum dolorem impedit totam porro dolores</p>
+                        <p>Here are the some of my design and development projects, feel free to visit them.</p>
                     </div>
                     <div class ="filter-group">
                         <ul class="list-filter list-untyled">
@@ -202,23 +203,37 @@
                                             <img class = "project-img" src="images/projects/project-image-1.jpg" alt="">
                                             <img class ="project-logo" src="images/projects/project-logo-1.png" alt="">
                                             <div class="overlay-content">
-                                                <h1>URS SENIOR HIGH SCHOOL WEBSITE
+                                                <h1>URS SENIOR HIGH SCHOOL WEBSITE (Development)
                                                 </h1>
-                                                <a href="javascript: void(0)">View Project</a>
+                                                <a href="https://urs-seniorhigh.netlify.app/" target ="_blank">View Project</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
     
-                                <div class="col-md-12 col-lg-6 design item">
+                                <div class="col-md-12 col-lg-6 development item">
                                     <div class="card">
                                         <div class="body-card">
                                             <img class = "project-img" src="images/projects/project-image-2.jpg" alt="">
                                             <img class ="project-logo" src="images/projects/project-logo-2.png" alt="">
                                             <div class="overlay-content">
-                                                <h1>My Portfolio version 1
+                                                <h1>My Portfolio version 1 (Development)
                                                 </h1>
-                                                <a href="javascript: void(0)">View Project</a>
+                                                <a href="https://melvin-portfoliov1.netlify.app/" target ="_blank">View Project</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                 <div class="col-md-12 col-lg-6 design item">
+                                    <div class="card">
+                                        <div class="body-card">
+                                            <img class = "project-img" src="images/projects/project-design-1.png" alt="">
+                                            <!-- <img class ="project-logo" src="images/projects/project-logo-2.png" alt=""> -->
+                                            <div class="overlay-content">
+                                                <h1>Main Portfolio Website  (Design)
+                                                </h1>
+                                                <a href="images/projects/portfolio.jpg" data-lightbox="Main Portfolio" target ="_blank">View Project</a>
                                             </div>
                                         </div>
                                     </div>
@@ -346,6 +361,7 @@
 		<script src="js/owl.carousel.min.js"></script>
         <script src="js/jquery.matchHeight.js"></script>
         <script src="js/isotope.min.js"></script>
+        <script src="js/lightbox.js"></script>
         <script src="js/main.js"></script>
         <script type="text/javascript">
 
