--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                     <div class="card">
                                         <div class="body-card">
                                             <img class = "project-img" src="images/projects/project-design-1.png" alt="">
-                                            <!-- <img class ="project-logo" src="images/projects/project-logo-2.png" alt=""> -->
+                                            <img class ="project-logo" src="images/project-logo.png" alt="">
                                             <div class="overlay-content">
                                                 <h1>Main Portfolio Website  (Design)
                                                 </h1>
@@ -287,8 +287,8 @@
                                     <div class="col-md-10">
                                         <ul class="list-links">
                                             <li><a href="https://web.facebook.com/NilvemTagdol" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
-                                            <li><a href="javascript: void(0)" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                                            <li><a href="javascript: void(0)" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                                            <li><a href="https://www.instagram.com/deymieel/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                                            <li><a href="https://linkedin.com/in/melvin-logdat-a18b751a9" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                         </ul>
                                     </div>
                                  </div>
@@ -298,7 +298,7 @@
                                     </div>
                                     <div class="col-md-10">
                                         <ul class="list-links">
-                                            <li><a href="javascript: void(0)" target="_blank"><i class="fa fa-github"></i></a></li>
+                                            <li><a href="https://github.com/Deymiel" target="_blank"><i class="fa fa-github"></i></a></li>
                                         </ul>
                                     </div>
                                  </div>
