--- a/index.html
+++ b/index.html
@@ -331,13 +331,13 @@
                                     <div class="col-md-12 col-form">
                                         <div class="form-group">
                                             <h1>Email</h1>
-                                            <input type="tel" placeholder="Email..." name ="email">
+                                            <input type="email" placeholder="Email..." name ="email">
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-form">
                                         <div class="form-group">
                                             <h1>Subject</h1>
-                                            <input type="text" placeholder="Phone.." name ="subject">
+                                            <input type="text" placeholder="Subject..." name ="subject">
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-form">
