--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <h1><span id="typed"></span></h1>
                                 <p>A Front End Web Developer</p>
                                 <div class="hero-buttons d-flex rel">
-                                    <a class ="btn-secondary" href="../mainPortfolio/resume/my-resume.pdf" download="">Download CV</a>
+                                    <a class ="btn-secondary" href="resume/my-resume.pdf" download>Download CV</a>
                                     <a class ="btn-primary" href="#projects">Projects</a>
                                 </div>
                             </div>
@@ -92,7 +92,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum faucibus metus erat, a tincidunt tortor ultricies rhoncus. Proin sed nunc et tellus tempor vulputate et vel neque. Aenean in viverra elit, eu imperdiet risus. Aliquam maximus magna vitae quam tempor facilisis eget in erat. Cras vestibulum ac felis vel porttitor. <br><br>
                                  Pellentesque facilisis sem sed iaculis cursus. Etiam eu faucibus nisl. Curabitur at metus non neque pellentesque lobortis ac vitae urna. Maecenas ut auctor ante, ut vestibulum risus. Fusce odio lectus,</p>
                                  <br><br>
-                                 <a href="../mainPortfolio/resume/my-resume.pdf" class="btn-teritiary" download>Download
+                                 <a href="resume/my-resume.pdf" class="btn-teritiary" download>Download
                                 CV</a>
                             </div>
                         </div>
