--- a/index.html
+++ b/index.html
@@ -58,16 +58,15 @@
         </header>
         <main role ="main">
             <!-- hero section -->
-            <section class ="hero-section rel bg-common" style="background-image: url(images/hero-banner.jpg);" id ="home">
+            <section class ="hero-section rel bg-common module" style="background-image: url(images/hero-banner.jpg);" id ="home">
                 <div class="container z-top">
                     <div class="row">
                         <div class="col-md-8">
                             <div class="hero-caption">
-                                <h1><span id="typed"></span></h1>
-                                <p>A Front End Web Developer</p>
+                                <h1 class ="text-header"><span id="typed"></span></h1>
                                 <div class="hero-buttons d-flex rel">
-                                    <a class ="btn-secondary" href="resume/my-resume.pdf" download>Download CV</a>
-                                    <a class ="btn-primary" href="#projects">Projects</a>
+                                    <a class ="download btn-secondary" href="resume/my-resume.pdf" download>Download CV</a>
+                                    <a class ="project btn-primary" href="#projects">Projects</a>
                                 </div>
                             </div>
                         </div>
@@ -76,12 +75,12 @@
             </section>
 
             <!-- About us section  -->
-            <section class ="about_us_section rel section_padding" id ="about">
+            <section class ="about_us_section rel section_padding module" id ="about">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-lg-6 rel">
-                            <div class="profile_cont rel wow bounceInDown">
-                                <div class="my_img rel">
+                            <div class="profile_cont rel ">
+                                <div class="my_img rel wow bounceInDown">
                                     <img src="images/my-img.jpg" alt="melvin" class ="">
                                 </div>
                             </div>
@@ -101,7 +100,7 @@
             </section>
 
             <!-- Technical Skill section -->
-            <section class ="technical_skill rel bg-common section_padding" style="background-image: url(images/technical_banner.jpg);" id ="technical">
+            <section class ="technical_skill rel bg-common section_padding module" style="background-image: url(images/technical_banner.jpg);" id ="technical">
                 <div class="container z-top">
                     <div class="common_header text-center">
                         <h1>Technical Skill</h1>
@@ -178,7 +177,7 @@
             </section>
 
             <!-- Projects / Portfolio section -->
-            <section class ="section_padding rel projects_section" id ="projects">
+            <section class ="section_padding rel projects_section module" id ="projects">
                 <div class="container">
                     <div class="common_header text-center">
                         <h1>Projects</h1>
@@ -247,7 +246,7 @@
             </section>
 
             <!-- Contact me section -->
-            <section class ="contact-section rel" id ="contact">
+            <section class ="contact-section rel module" id ="contact">
                 <div class="container">
                     <div class="common_header text-center">
                         <h1>Message me</h1>
@@ -370,7 +369,8 @@
   
         <!-- <script src="js/jquery-v3.3.1.min.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-		<script src="js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
 		<script src="js/owl.carousel.min.js"></script>
         <script src="js/jquery.matchHeight.js"></script>
         <script src="js/isotope.min.js"></script>
